--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
     <title>Map with Driving Route from A to B</title>
     <link rel="stylesheet" type="text/css" href="https://js.api.here.com/v3/3.1/mapsjs-ui.css" />  
+    <link rel="stylesheet" type="text/css" href="index.css" />
     <script type="text/javascript" src="https://js.api.here.com/v3/3.1/mapsjs-core.js"></script>
     <script type="text/javascript" src="https://js.api.here.com/v3/3.1/mapsjs-service.js"></script>
     <script type="text/javascript" src="https://js.api.here.com/v3/3.1/mapsjs-ui.js"></script>
@@ -159,23 +160,27 @@
       }
       </style>
   </head>
-  <body id="markers-on-the-map">
-    
+  <body id="markers-on-the-map" class="container">
+
+      <div>
     <div class="page-header">
-        <h1>Map with Driving Route from A to B</h1>
-        <p>Request a driving route from A to B and display it on the map</p>
+        <h1>Driving Route from Current Location to Parking Lot(Avoiding Lion Rock Tunnel)</h1>
+        <!-- <p>Request a driving route from A to B and display it on the map</p> -->
     </div>
-    <p>This example calculates the fastest car route from the <b>Brandenburg Gate</b> 
-      in the centre of Berlin <i>(52.51605°N, 13.37787°E)</i> to <b>Friedrichstraße Railway Station</b> 
-      <i>(52.52058°N, 13.38615°E)</i>, and displays it on the map.</p>
-    <div id="map"></div>
-    <div id="panel"></div>
-    <h3>Code</h3>
+    <p>This example calculates the fastest car route from  <b>Tai Wai 大圍</b> 
+       <i>(22.3712 lat, 114.1782 lon)</i> to <b>Parking Lot 啟德郵輪碼頭停車場</b> 
+      <i>(22.3062 lat, 114.2130 lon)</i>, and displays it on the map.</p>
+      <div class="flex">
+    <div class="column" id="map"></div>
+    <div class="column" id="panel"></div>
+    <!-- <h3>Code</h3>
     <p>Access to the routing service is obtained from the <code>H.service.Platform</code> by calling 
       <code>getRoutingService()</code>. The <code>calculateRoute()</code> method is used to calculate the fastest 
       car (<code>mode:fastest;car</code>) route by passing in the relevant parameters as defined in 
       <a href="http://developer.here.com/rest-apis/documentation/routing/topics/resource-calculate-route.html" target="_blank">Routing API</a>. 
-      The styling and display of the response is under the control of the developer.</p>
+      The styling and display of the response is under the control of the developer.</p> -->
     <script type="text/javascript" src='index.js'></script>
+      </div>
+    </div>
   </body>
 </html>
